--- a/about.html
+++ b/about.html
@@ -6,11 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>My about</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="manifest" href="manifest.webmanifest" />
     <script src="/js/main.js"></script>
   </head>
   <body>
     <nav id="topnav">
-      <img src="internet_web_browser.png" alt="Hi" />
+      <img src="./images/128world.png" alt="Hi" />
       <a href="index.html">Home</a>
       <a href="about.html" id="active">About</a>
     </nav>
