Modified site to test FlightApp look and feel

--- a/index.html
+++ b/index.html
@@ -4,27 +4,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>My index</title>
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="manifest" href="manifest.webmanifest" />
-    <script src="/js/main.js"></script>
+    <link rel="manifest" href="manifest.json" />
+    <title>FlightApp - A new way to fly</title>
   </head>
   <body>
-    <nav id="topnav">
-      <img src="./images/128world.png" alt="Hi" />
-      <a href="index.html" id="active">Home</a>
-      <a href="about.html">About</a>
+    <nav>
+      <div class="home">
+        <img src="./images/icons/icon-72x72.png" alt="home" />
+        <h4>FlightApp</h4>
+      </div>
+
+      <ul class="nav-links">
+        <li><a href="#">Flights</a></li>
+        <li><a href="#">Airlines</a></li>
+        <li><a href="#">Airports</a></li>
+        <li><a href="#">Reservations</a></li>
+      </ul>
+      <div class="hamburger">
+        <div class="burg1"></div>
+        <div class="burg2"></div>
+        <div class="burg3"></div>
+      </div>
     </nav>
-    <main>
-      <h2>Home</h2>
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos animi
-        commodi voluptas doloremque ratione explicabo doloribus, tempora debitis
-        sed ea ad, excepturi, aliquid tempore corporis neque totam dolore a quod
-        delectus illo nemo inventore velit omnis consectetur. Iste, odio
-        asperiores. Impedit illo repellat, necessitatibus amet ipsum porro fuga
-        corporis quas!
-      </p>
-    </main>
+    <script src="./js/index.js"></script>
   </body>
 </html>
